--- a/计算机科学/Front End前端(FE)/前端框架设计.md
+++ b/计算机科学/Front End前端(FE)/前端框架设计.md
@@ -106,3 +106,31 @@ Web前端框架通常包括以下几个共通的方面：
 - **零配置**: 默认配置已经为开发优化，但同时提供灵活性以定制Webpack等工具。
 
 每个框架都有其特定的优势和适用场景，选择哪个框架通常取决于项目的需求、团队的技能和偏好。
+
+
+
+
+
+以下是 Vue, React 和 Angular 在不同前端框架方面的对比表格：
+
+| 特性               | Vue                                  | React                                         | Angular                                  |
+| ------------------ | ------------------------------------ | --------------------------------------------- | ---------------------------------------- |
+| 模板引擎/渲染机制  | HTML 模板，Vue 指令的声明式渲染      | JSX 模板，基于组件的渲染                      | HTML 模板与 Angular 指令，动态渲染       |
+| 组件系统           | 单文件组件（SFC），响应式和可组合    | 可重用的类或函数式组件                        | 使用 TypeScript 的组件，层次依赖注入     |
+| 状态管理           | Vuex 全局状态管理，组件本地状态      | Context API, Redux, MobX 全局状态管理         | 服务和 RxJS 管理状态                     |
+| 路由系统           | Vue Router 管理 SPA 路由             | React Router 管理 SPA 路由                    | Angular Router 管理 SPA 导航             |
+| 数据获取和管理     | Axios 进行 AJAX 调用，支持 Fetch API | Fetch API, Axios 数据获取，支持 GraphQL       | HttpClient 模块进行 HTTP 请求            |
+| 工具链和构建工具   | Webpack, Vue CLI, Babel              | Webpack, Create React App, Babel              | Angular CLI, TypeScript, Webpack, Babel  |
+| 响应式和适配性设计 | 响应式设计，CSS 和 Vue 特定方法      | CSS 框架，Flexbox/Grid，媒体查询              | Angular Material, Flex Layout 响应式设计 |
+| 客户端路由         | Vue Router 管理 SPA 中的客户端路由   | React Router 管理 SPA 中的客户端路由          | Angular Router 内置支持客户端路由        |
+| 事件处理           | Vue 方法和事件修饰符处理             | JSX 中使用合成事件处理                        | 模板中的事件绑定                         |
+| 测试和调试         | Vue Test Utils 单元测试，Cypress E2E | Jest 单元测试，React Testing Library，Cypress | Karma 和 Jasmine 测试，Protractor E2E    |
+| 文档和社区支持     | 详尽文档，大型社区                   | 丰富的生态系统，全面文档                      | 全面的文档，强大的社区                   |
+
+这个表格提供了三个主要前端框架在各个方面的基本对比，可以帮助你根据项目需求和技术偏好选择合适的框架。
+
+
+
+
+
+- https://chat.openai.com/c/5fee67e1-a58b-4ef4-a60d-dd11f4489f31
