--- a/计算机科学/Database/数据库设计.md
+++ b/计算机科学/Database/数据库设计.md
@@ -29,3 +29,9 @@
 12. **数据库维护（Database Maintenance）**: 定期进行的任务，如性能调优、碎片整理等，以保持数据库的高性能和稳定性。
 
 不同类型的数据库（如关系型数据库、NoSQL数据库）在这些方面的实现可能有所不同，但这些是大多数数据库共有的关键方面。
+
+
+
+
+
+![Camera_1040g0k030t2f9u1kjs005ndt3g708sv5d4q1iig](https://p.ipic.vip/a3igf5.jpg)
