--- a/计算机科学/Big Data/一文纵览大数据计算生态.md
+++ b/计算机科学/Big Data/一文纵览大数据计算生态.md
@@ -2,6 +2,8 @@
 
 ## 大数据技术概览
 
+![image-20240325184950102](https://p.ipic.vip/z6cdxm.png)
+
 ## **概述**
 
 大数据计算发展至今，已经形成了一个百花齐放的大数据生态，通用的、定制的，批量的、实时的，关系的、图的、非结构的，数据计算的、机器学习的，我们都可以找到各种对应的计算引擎。
