--- a/计算机科学/Big Data/大数据技术栈.md
+++ b/计算机科学/Big Data/大数据技术栈.md
@@ -91,7 +91,7 @@ BigData Stack：
 
 
 
-![img](https://pic2.zhimg.com/80/v2-49bbbe8d5d7bc6314990cbe019c0f77d_1440w.jpg)
+![img](https://p.ipic.vip/svjvz6.jpg)
 
 ## 采集层 && 传输层
 
