--- a/计算机科学/Programming Language Theory (PLT)/🥑Type Theory/范型对比.md
+++ b/计算机科学/Programming Language Theory (PLT)/🥑Type Theory/范型对比.md
@@ -210,3 +210,91 @@
 ### 结论
 
 通过上述详细和全面的表格，我们可以更清晰地看到 Rust 在泛型形变方面的复杂性和灵活性。Rust 通过生命周期、引用、所有权和借用等机制，确保了内存安全和类型安全。理解这些机制对于编写安全、高效和可维护的 Rust 代码至关重要。如果你有更多具体问题或需要进一步的解释，请随时提问！
+
+
+
+
+
+### ----------------------------------------
+
+这个图表展示了不同编程语言实现泛型（Generics）和元编程（Metaprogramming）的方式。以下是对每个部分的详细解释：
+
+### 1. 泛型实现的基本方法
+
+**目标**：让数据结构适用于多种类型的数据。
+
+**方法**：
+- **统一行为（make all the things act the same）**：通过将所有类型的数据包装成一个通用的类型（通常称为 boxing）。
+- **生成多种版本的结构（make many versions of the structure）**：为每种具体的类型生成一个专用的版本（称为 monomorphization）。
+
+### 2. 详细实现方式
+
+#### 统一行为
+
+- **Boxing**：将所有类型的数据都包装成一个通用类型。
+  - 例子：Java 的 `Object` 类型，C# 的 `object` 类型。
+  - **VTables**（虚表）：通过虚函数表来动态分派函数调用。
+    - 例子：Go 的接口（Interfaces）、Rust 的动态 trait（dyn trait）。
+  - **Embedded VTables**（嵌入式虚表）：虚函数表嵌入到对象中，减少间接调用的开销。
+    - 例子：Java、C++。
+  - **Dictionary Passing**：通过传递字典来实现类型的动态调度。
+    - 例子：Haskell 的 GHC、OCaml。
+  - **Witness Tables**：通过见证表来实现类型的动态调度。
+    - 例子：Swift。
+
+#### 生成多种版本的结构
+
+- **Type Erased Generics**（类型擦除的泛型）：在编译时擦除类型信息，只保留运行时所需的类型信息。
+  - 例子：Java。
+- **Uniform Representation**（统一表示）：为所有类型创建一个统一的表示形式。
+  - 例子：OCaml。
+
+### 3. 函数调用方式
+
+**目标**：数据结构需要调用一些函数。
+
+**方法**：
+- **Reflection**（反射）：在运行时检查和调用类型和方法。
+  - 例子：Java、C#。
+- **Dynamic Types**（动态类型）：在运行时确定类型和方法。
+  - 例子：Python、JavaScript。
+
+### 4. 表示和复制
+
+**目标**：如何对泛型类型进行复制和表示。
+
+**方法**：
+- **Source Code**（源代码）：直接生成源代码。
+  - 例子：Go、C 的宏（C macros）。
+- **Tokens**（标记）：基于标记进行处理。
+  - 例子：Rust 的过程宏（proc macros）。
+- **Syntax Trees**（语法树）：基于语法树进行处理。
+  - 例子：Haskell 的 AST 宏、OCaml 的 AST 宏。
+- **Compiler IR**（编译器中间表示）：使用编译器的中间表示。
+  - **With Types?**（是否带有类型信息？）
+    - **No**（否）：不带有类型信息。
+      - 例子：C 的宏、D 的字符串混入（string mixins）。
+    - **Yes**（是）：带有类型信息。
+      - 例子：Rust 的 trait bounds。
+
+### 具体语言实现的细节
+
+| 语言       | 泛型实现方式                                                 | 元编程扩展                                      |
+| ---------- | ------------------------------------------------------------ | ----------------------------------------------- |
+| Java       | 类型擦除的泛型（Type Erased Generics）、嵌入式虚表（Embedded VTables） | 反射（Reflection）                              |
+| C#         | 类型擦除的泛型（Type Erased Generics）、嵌入式虚表（Embedded VTables） | 反射（Reflection）                              |
+| Rust       | 单态化（Monomorphization）、动态 trait（dyn trait）、过程宏（proc macros） | Trait bounds、过程宏（proc macros）             |
+| Go         | 接口（Interfaces）、源码生成（Code Generation）              | 接口（Interfaces）、源码生成（Code Generation） |
+| Haskell    | 字典传递（Dictionary Passing）、AST 宏（AST Macros）         | AST 宏（AST Macros）                            |
+| OCaml      | 字典传递（Dictionary Passing）、统一表示（Uniform Representation） | AST 宏（AST Macros）                            |
+| Swift      | 见证表（Witness Tables）                                     | 见证表（Witness Tables）                        |
+| Python     | 动态类型（Dynamic Types）                                    | 动态类型（Dynamic Types）                       |
+| JavaScript | 动态类型（Dynamic Types）                                    | 动态类型（Dynamic Types）                       |
+| D          | 模板（Templates）、字符串混入（String Mixins）               | 模板（Templates）、字符串混入（String Mixins）  |
+| C++        | 模板（Templates）、嵌入式虚表（Embedded VTables）            | 模板（Templates）                               |
+| Zig        | 分阶段函数（Staged Functions）                               | 分阶段函数（Staged Functions）                  |
+| Terra      | 分阶段函数（Staged Functions）                               | 分阶段函数（Staged Functions）                  |
+
+### 结论
+
+不同编程语言采用了不同的方法来实现泛型和元编程扩展。理解这些实现方式及其背后的原理，可以帮助开发者更好地选择和使用这些语言的特性，提高代码的通用性、性能和可维护性。如果你有更多具体问题或需要进一步的解释，请随时提问！
