--- a/计算机科学/Programming Language Theory (PLT)/🥑数学基础/数学基础.md
+++ b/计算机科学/Programming Language Theory (PLT)/🥑数学基础/数学基础.md
@@ -3,5 +3,9 @@
 - https://zh.wikipedia.org/wiki/%E6%95%B0%E5%AD%A6
 - https://zh.wikipedia.org/wiki/%E6%95%B0%E7%90%86%E9%80%BB%E8%BE%91
 - https://zh.wikipedia.org/wiki/%E6%8B%93%E6%89%91%E5%AD%A6
+- 代数拓扑 
+  - https://zh.wikipedia.org/wiki/Category:%E6%8B%93%E6%89%91%E5%AD%A6
+  - https://zh.wikipedia.org/wiki/Category:%E4%BB%A3%E6%95%B0%E6%8B%93%E6%89%91
+
 
 ![image-20240524174822866](https://p.ipic.vip/cxjxcl.png)
