--- a/其他/语言/英语/音标.md
+++ b/其他/语言/英语/音标.md
@@ -1,4 +1,4 @@
-![48个国际音标](<http://r.photo.store.qq.com/psb?/V14L47VC0w3vOf/Lvmypwp*C9XciwUxAx0PSMAQJobXecHoAx5Mtn2Ept0!/r/dLYAAAAAAAAA>)
+![48个国际音标](<https://p.ipic.vip/6lcs54.jpg>)
 
 
 
